Adding Scalar Api Doc and Adding Two Classes for Services and Di Conatiner

--- a/Core/SupermarketPOS.Abstraction/SupermarketPOS.Abstraction.csproj
+++ b/Core/SupermarketPOS.Abstraction/SupermarketPOS.Abstraction.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SupermarketPOS.Domain\SupermarketPOS.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
