--- a/Infastructure/SupermarketPOS.persistence/SupermarketPOS.persistence.csproj
+++ b/Infastructure/SupermarketPOS.persistence/SupermarketPOS.persistence.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\SupermarketPOS.Abstraction\SupermarketPOS.Abstraction.csproj" />
+    <ProjectReference Include="..\..\Core\SupermarketPOS.Domain\SupermarketPOS.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
