Adding Serilog for logging Udpated .gitignore to exclude log files Updated DiContainer to register Serilog services Updated ServiceCollectionExtentions to add Serilog configuration Updated Program.cs to use Serilog for logging Updated launchSettings.json for development environment settings

--- a/.gitignore
+++ b/.gitignore
@@ -379,6 +379,8 @@ FodyWeavers.xsd
 *.msix
 *.msm
 *.msp
+# Ignore only this appsettings.json
+Web/SupermarketPOS.Web.Api/appsettings.json
 
 # JetBrains Rider
 *.sln.iml
