--- a/Web/SupermarketPOS.Web.Api/Properties/launchSettings.json
+++ b/Web/SupermarketPOS.Web.Api/Properties/launchSettings.json
@@ -15,6 +15,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7189;http://localhost:5063",
+      "launchUrl": "scalar",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
