--- a/Web/SupermarketPOS.Web.Api/SupermarketPOS.Web.Api.csproj
+++ b/Web/SupermarketPOS.Web.Api/SupermarketPOS.Web.Api.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.7.2" />
     <PackageReference Include="Scalar.AspNetCore.Swashbuckle" Version="2.7.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="8.2.2" />
   </ItemGroup>
 
   <ItemGroup>
