Add The Appsetting

--- a/Web/SupermarketPOS.Web.Api/appsettings.json
+++ b/Web/SupermarketPOS.Web.Api/appsettings.json
@@ -5,5 +5,46 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db26452.public.databaseasp.net; Database=db26452; User Id=db26452; Password=6Nw?o8_W=K9i; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/applog-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=db26452.public.databaseasp.net; Database=db26452; User Id=db26452; Password=6Nw?o8_W=K9i; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true,
+          "schemaName": "dbo",
+          "batchPostingLimit": 1000,
+          "period": "0.00:00:30"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "Supermarket POS API"
+    }
+  }
 }
