--- a/Core/SupermarketPOS.Domain/SupermarketPOS.Domain.csproj
+++ b/Core/SupermarketPOS.Domain/SupermarketPOS.Domain.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entites\" />
+  <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.8" />
+  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
   </ItemGroup>
 
 </Project>
