--- a/Infastructure/SupermarketPOS.persistence/SupermarketPOS.persistence.csproj
+++ b/Infastructure/SupermarketPOS.persistence/SupermarketPOS.persistence.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\SupermarketPOS.Abstraction\SupermarketPOS.Abstraction.csproj" />
     <ProjectReference Include="..\..\Core\SupermarketPOS.Domain\SupermarketPOS.Domain.csproj" />
   </ItemGroup>
